# face-detect

./: .gitignore  README.md  face_detector.py  pyproject.toml
face/: readme
