[project]
name = "detect-hui-face"
version = "0.1.0"
description = "Face detection and comparison tool using Mac camera"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.8.0",
    "face-recognition>=1.3.0",
    "face-recognition-models @ git+https://github.com/ageitgey/face_recognition_models",
    "numpy>=1.24.0",
    "pillow>=9.5.0",
    "setuptools>=65.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "face_detector.py",
    "face/",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]